# openssl-android-binary

./: CMakeLists.txt  README.md
curl-arm64-v8a/lib/: libcurl.la
curl-arm64-v8a/lib/pkgconfig/: libcurl.pc
curl-armeabi-v7a/lib/: libcurl.la
curl-armeabi-v7a/lib/pkgconfig/: libcurl.pc
curl-x86_64/lib/: libcurl.la
curl-x86_64/lib/pkgconfig/: libcurl.pc
nghttp2-arm64-v8a/lib/: libnghttp2.la
nghttp2-arm64-v8a/lib/pkgconfig/: libnghttp2.pc
nghttp2-armeabi-v7a/lib/: libnghttp2.la
nghttp2-armeabi-v7a/lib/pkgconfig/: libnghttp2.pc
nghttp2-x86_64/lib/: libnghttp2.la
nghttp2-x86_64/lib/pkgconfig/: libnghttp2.pc
openssl-arm64-v8a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl-armeabi-v7a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl-x86_64/lib/: libcrypto.so.1.1
openssl-x86_64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
